<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.standard.acmeatelier.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_design"
        android:name="com.standard.acmeatelier.DesignFragment"
        android:label="@string/design"
        tools:layout="@layout/fragment_design" />

    <fragment
        android:id="@+id/navigation_inspire"
        android:name="com.standard.acmeatelier.GalleryFragment"
        android:label="@string/inspiration"
        tools:layout="@layout/fragment_inspire" />
</navigation>