<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="182dp"
        android:layout_height="252dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="89dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/aaLogo"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/aa_logo"
        tools:ignore="RedundantDescriptionCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="141dp"
        android:layout_height="60dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#464444"
        android:text="@string/getStartedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="60dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#464444"
        android:text="@string/moreButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>